Upgrade to bfs navigation library v4.0.1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,14 +6,14 @@ Lint:
   tags:
     - bfs
   script: 
-    - cpplint --verbose=0 include/navigation/constants.h
-    - cpplint --verbose=0 include/navigation/ekf_15_state.h
-    - cpplint --verbose=0 include/navigation/navigation.h
-    - cpplint --verbose=0 include/navigation/tilt_compass.h
-    - cpplint --verbose=0 include/navigation/transforms.h
-    - cpplint --verbose=0 include/navigation/utils.h
-    - cpplint --verbose=0 src/navigation/ekf_15_state.cc
-    - cpplint --verbose=0 src/navigation/tilt_compass.cc
-    - cpplint --verbose=0 src/navigation/transforms.cc
-    - cpplint --verbose=0 src/navigation/utils.cc
+    - cpplint --verbose=0 src/constants.h
+    - cpplint --verbose=0 src/ekf_15_state.h
+    - cpplint --verbose=0 src/navigation.h
+    - cpplint --verbose=0 src/tilt_compass.h
+    - cpplint --verbose=0 src/transforms.h
+    - cpplint --verbose=0 src/utils.h
+    - cpplint --verbose=0 src/ekf_15_state.cpp
+    - cpplint --verbose=0 src/tilt_compass.cpp
+    - cpplint --verbose=0 src/transforms.cpp
+    - cpplint --verbose=0 src/utils.cpp
   
