--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=Bolder Flight Systems Navigation
-version=4.0.1
-author=Brian Taylor <brian.taylor@bolderflight.com>
-maintainer=Brian Taylor <brian.taylor@bolderflight.com>
+version=1.0.5
+author=Tuan Luong <tdluong@crimson.ua.edu>
+maintainer=Tuan Luong <tdluong@crimson.ua.edu>
 sentence=Navigation and state estimation transformations, utilities, and filters.
 paragraph=This is a library of navigation and state estimation transformations, utilities, and filters
 category=Data Processing
-url=https://github.com/bolderflight/navigation
+url=https://github.com/TL-4319/test_bfs_navigation.git
 architectures=*
 includes=navigation.h
 depends=Bolder Flight Systems Units, Bolder Flight Systems Eigen
